small fixes + fact trip preparation

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "# Add columns\n",
     "dim_date_df = dates_df \\\n",
-    "    .withColumn(\"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\")) \\\n",
+    "    .withColumn(\"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\").cast(\"bigint\")) \\\n",
     "    .withColumn(\"Year\", year(col(\"Full_Date\"))) \\\n",
     "    .withColumn(\"Quarter\", quarter(col(\"Full_Date\"))) \\\n",
     "    .withColumn(\"Month\", month(col(\"Full_Date\"))) \\\n",
@@ -137,7 +137,7 @@
     "\n",
     "# Add Date_Key\n",
     "dim_date_hour_df = dim_date_hour_df.withColumn(\n",
-    "    \"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\").cast(\"int\")\n",
+    "    \"Date_Key\", date_format(col(\"Full_Date\"), \"yyyyMMdd\").cast(\"bigint\")\n",
     ")\n",
     "\n",
     "# IsRushHour: 7-9am and 16-18pm\n",
@@ -202,29 +202,6 @@
     "ALTER TABLE divvy.default.DIM_Date_hour\n",
     "ADD CONSTRAINT dim_date_hour_pk PRIMARY KEY (dim_date_hour_pk)\n",
     "NOT ENFORCED;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7baf7ea2-a4a4-473f-afc3-2ec9c6fcc946",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE dim_station"
    ]
   },
   {
@@ -308,15 +285,15 @@
     "-- DIM Weather\n",
     "\n",
     "CREATE OR REPLACE TABLE dim_weather (\n",
-    "    Weather_Key                 TIMESTAMP, \n",
-    "    Temp_type_text              STRING,\n",
-    "    Temp_type_bin               DOUBLE,\n",
-    "    Humidity_categories_text    STRING,\n",
-    "    Humidity_categories_bin     DOUBLE,\n",
-    "    Precipitation_types_text    STRING,\n",
-    "    Precipitation_types_bin     DOUBLE,\n",
-    "    Wind_type_categories_text   STRING,\n",
-    "    Wind_type_categories_bin    DOUBLE,\n",
+    "    Weather_Key TIMESTAMP, \n",
+    "    Temp_type_text STRING,\n",
+    "    Temp_type_bin DOUBLE,\n",
+    "    Humidity_categories_text STRING,\n",
+    "    Humidity_categories_bin DOUBLE,\n",
+    "    Precipitation_types_text STRING,\n",
+    "    Precipitation_types_bin DOUBLE,\n",
+    "    Wind_type_categories_text STRING,\n",
+    "    Wind_type_categories_bin DOUBLE,\n",
     "    PRIMARY KEY (Weather_Key) NOT ENFORCED\n",
     ")\n",
     "USING DELTA;"
@@ -341,74 +318,36 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
-    "-- fact trip table\n",
-    "CREATE OR REPLACE TABLE divvy.default.FACT_trip AS\n",
-    "SELECT\n",
-    "    t.ride_id,\n",
-    "    t.Trip_Distance_Km,\n",
-    "    t.Trip_Duration_Min,\n",
-    "    t.Full_Date,\n",
-    "    d.Date_Key,\n",
-    "    s.Station_Key,\n",
-    "    r.Rider_key,\n",
-    "    w.weather_ts,\n",
-    "    dh.dim_date_hour_pk\n",
-    "FROM divvy.default.silver_trip_data AS t\n",
-    "LEFT JOIN divvy.default.DIM_Date_day AS d\n",
-    "    ON t.Full_Date = d.Full_Date\n",
-    "LEFT JOIN divvy.default.Dim_Station AS  s\n",
-    "    ON t.start_station_id = s.Station_Key\n",
-    "LEFT JOIN divvy.default.Dim_Rider AS  r\n",
-    "    ON t.rideable_type = r.Bike_Type\n",
-    "LEFT JOIN divvy.default.silver_weather_data AS  w\n",
-    "    ON t.trip_start_ts=w.weather_ts\n",
-    "LEFT JOIN divvy.default.DIM_Date_hour AS  dh\n",
-    "    ON d.Date_Key = dh.Date_Key\n",
-    "    AND hour(t.trip_start_ts) = dh.Hour\n",
-    "    AND minute(t.trip_start_ts) - (minute(t.trip_start_ts) % 15) = dh.MinuteBucket\n",
+    "spark.sql(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS fact_trip (\n",
+    "Trip_Key                    BIGINT GENERATED ALWAYS AS IDENTITY,\n",
+    "-- Foreign Keys (FKs)\n",
+    "Start_Date_Key STRING,\n",
+    "Start_Date_Hour_Key         STRING,\n",
+    "End_Date_Key                STRING,\n",
+    "End_Date_Hour_Key           STRING,\n",
+    "Rider_Key                   BIGINT,\n",
+    "Start_Station_Key           BIGINT,\n",
+    "End_Station_Key             BIGINT,\n",
+    "Weather_Key                 TIMESTAMP,\n",
+    "-- Measures\n",
+    "Trip_Duration_Minutes       DOUBLE,\n",
     "\n",
-    "    "
+    "\n",
+    "CONSTRAINT pk_fact_trip PRIMARY KEY (Trip_Key) NOT ENFORCED,\n",
+    "\n",
+    "CONSTRAINT fk_start_date FOREIGN KEY (Start_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
+    "CONSTRAINT fk_start_hour FOREIGN KEY (Start_Date_Hour_Key) REFERENCES dim_date_hour(dim_date_hour_pk) NOT ENFORCED,\n",
+    "CONSTRAINT fk_end_date FOREIGN KEY (End_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
+    "CONSTRAINT fk_end_hour FOREIGN KEY (End_Date_Hour_Key) REFERENCES dim_date_hour(dim_date_hour_pk) NOT ENFORCED,\n",
+    "CONSTRAINT fk_rider FOREIGN KEY (Rider_Key) REFERENCES dim_rider(Rider_key) NOT ENFORCED,\n",
+    "CONSTRAINT fk_start_station FOREIGN KEY (Start_Station_Key) REFERENCES dim_station(Station_Key) NOT ENFORCED,\n",
+    "CONSTRAINT fk_end_station FOREIGN KEY (End_Station_Key) REFERENCES dim_station(Station_Key) NOT ENFORCED,\n",
+    "CONSTRAINT fk_weather FOREIGN KEY (Weather_Key) REFERENCES dim_weather(Weather_Key) NOT ENFORCED\n",
+    ")\n",
+    "USING DELTA\n",
+    "\"\"\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "94fb5b46-3747-490a-9527-b73fb7f06859",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE fact_trip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "b003d94f-b6ea-42c4-8b93-d8302c482c15",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -423,7 +362,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5444801716230499,
+     "commandId": 6033623745161743,
      "dataframes": [
       "_sqldf"
      ]
