--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -11,29 +11,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a1bf0b1e-bd17-403f-aa30-5adc2dda2cd7",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE silver_trip_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "3a5c779e-8bde-452d-b5f7-64b95a4b2c42",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -174,12 +151,13 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- silver_trip_data_pk\n",
+    "-- pk ride_id for silver_trip_data\n",
+    "\n",
     "ALTER TABLE silver_trip_data\n",
     "ALTER COLUMN ride_id SET NOT NULL;\n",
     "\n",
     "ALTER TABLE silver_trip_data\n",
-    "ADD CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id);"
+    "ADD CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id) NOT ENFORCED;"
    ]
   },
   {
@@ -285,7 +263,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8635953509972504,
+     "commandId": 4811261326724919,
      "dataframes": [
       "_sqldf"
      ]
