fix pk for dim date hour

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -189,19 +189,13 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- Add unique primary key column: dim_date_hour_pk\n",
-    "ALTER TABLE divvy.default.DIM_Date_hour\n",
-    "ADD COLUMN dim_date_hour_pk STRING;\n",
+    "--dim_date_hour_pk\n",
+    "ALTER TABLE dim_date_hour\n",
+    "ALTER COLUMN Date_Key SET NOT NULL;\n",
     "\n",
-    "UPDATE divvy.default.DIM_Date_hour\n",
-    "SET dim_date_hour_pk = concat(Date_Key, '_', cast(Hour as string), '_', cast(MinuteBucket as string));\n",
-    "\n",
-    "ALTER TABLE divvy.default.DIM_Date_hour\n",
-    "ALTER COLUMN dim_date_hour_pk SET NOT NULL;\n",
-    "\n",
-    "ALTER TABLE divvy.default.DIM_Date_hour\n",
-    "ADD CONSTRAINT dim_date_hour_pk PRIMARY KEY (dim_date_hour_pk)\n",
-    "NOT ENFORCED;"
+    "ALTER TABLE dim_date_hour\n",
+    "ADD CONSTRAINT dim_date_hour_pk PRIMARY KEY (Date_Key)\n",
+    "NOT ENFORCED"
    ]
   },
   {
@@ -318,12 +312,15 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "# FACT TRIP TABLE\n",
+    "\n",
     "spark.sql(\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS fact_trip (\n",
     "Trip_Key                    BIGINT GENERATED ALWAYS AS IDENTITY,\n",
-    "-- Foreign Keys (FKs)\n",
-    "Start_Date_Key STRING,\n",
-    "Start_Date_Hour_Key         STRING,\n",
+    "-- Foreign Keys\n",
+    "Start_Date_Key BIGINT,\n",
+    "Start_Date_Hour_Key         BIGINT,\n",
     "End_Date_Key                STRING,\n",
     "End_Date_Hour_Key           STRING,\n",
     "Rider_Key                   BIGINT,\n",
@@ -333,7 +330,7 @@
     "-- Measures\n",
     "Trip_Duration_Minutes       DOUBLE,\n",
     "\n",
-    "\n",
+    "-- Primary Key\n",
     "CONSTRAINT pk_fact_trip PRIMARY KEY (Trip_Key) NOT ENFORCED,\n",
     "\n",
     "CONSTRAINT fk_start_date FOREIGN KEY (Start_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
@@ -362,7 +359,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6033623745161743,
+     "commandId": 7614042567928019,
      "dataframes": [
       "_sqldf"
      ]
