Fact table insertion data ready

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -317,30 +317,30 @@
     "\n",
     "spark.sql(\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS fact_trip (\n",
-    "Trip_Key                    BIGINT GENERATED ALWAYS AS IDENTITY,\n",
-    "-- Foreign Keys\n",
-    "Start_Date_Key BIGINT,\n",
-    "Start_Date_Hour_Key         BIGINT,\n",
-    "End_Date_Key                STRING,\n",
-    "End_Date_Hour_Key           STRING,\n",
-    "Rider_Key                   BIGINT,\n",
-    "Start_Station_Key           BIGINT,\n",
-    "End_Station_Key             BIGINT,\n",
-    "Weather_Key                 TIMESTAMP,\n",
-    "-- Measures\n",
-    "Trip_Duration_Minutes       DOUBLE,\n",
+    "  Trip_Key BIGINT GENERATED ALWAYS AS IDENTITY,\n",
+    "  -- Foreign Keys\n",
+    "  Start_Date_Key BIGINT,\n",
+    "  Start_Date_Hour_Key BIGINT,\n",
+    "  End_Date_Key BIGINT,\n",
+    "  End_Date_Hour_Key BIGINT,\n",
+    "  Rider_Key BIGINT,\n",
+    "  Start_Station_Key BIGINT,\n",
+    "  End_Station_Key BIGINT,\n",
+    "  Weather_Key TIMESTAMP,\n",
+    "  -- Measures\n",
+    "  Trip_Duration_Minutes DOUBLE,\n",
     "\n",
-    "-- Primary Key\n",
-    "CONSTRAINT pk_fact_trip PRIMARY KEY (Trip_Key) NOT ENFORCED,\n",
+    "  -- Primary Key\n",
+    "  CONSTRAINT pk_fact_trip PRIMARY KEY (Trip_Key) NOT ENFORCED,\n",
     "\n",
-    "CONSTRAINT fk_start_date FOREIGN KEY (Start_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
-    "CONSTRAINT fk_start_hour FOREIGN KEY (Start_Date_Hour_Key) REFERENCES dim_date_hour(dim_date_hour_pk) NOT ENFORCED,\n",
-    "CONSTRAINT fk_end_date FOREIGN KEY (End_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
-    "CONSTRAINT fk_end_hour FOREIGN KEY (End_Date_Hour_Key) REFERENCES dim_date_hour(dim_date_hour_pk) NOT ENFORCED,\n",
-    "CONSTRAINT fk_rider FOREIGN KEY (Rider_Key) REFERENCES dim_rider(Rider_key) NOT ENFORCED,\n",
-    "CONSTRAINT fk_start_station FOREIGN KEY (Start_Station_Key) REFERENCES dim_station(Station_Key) NOT ENFORCED,\n",
-    "CONSTRAINT fk_end_station FOREIGN KEY (End_Station_Key) REFERENCES dim_station(Station_Key) NOT ENFORCED,\n",
-    "CONSTRAINT fk_weather FOREIGN KEY (Weather_Key) REFERENCES dim_weather(Weather_Key) NOT ENFORCED\n",
+    "  CONSTRAINT fk_start_date FOREIGN KEY (Start_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_start_hour FOREIGN KEY (Start_Date_Hour_Key) REFERENCES dim_date_hour(Date_Key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_end_date FOREIGN KEY (End_Date_Key) REFERENCES dim_date_day(Date_Key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_end_hour FOREIGN KEY (End_Date_Hour_Key) REFERENCES dim_date_hour(Date_Key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_rider FOREIGN KEY (Rider_Key) REFERENCES dim_rider(Rider_key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_start_station FOREIGN KEY (Start_Station_Key) REFERENCES dim_station(Station_Key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_end_station FOREIGN KEY (End_Station_Key) REFERENCES dim_station(Station_Key) NOT ENFORCED,\n",
+    "  CONSTRAINT fk_weather FOREIGN KEY (Weather_Key) REFERENCES dim_weather(Weather_Key) NOT ENFORCED\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\")"
