--- a/04 - Insertion.ipynb
+++ b/04 - Insertion.ipynb
@@ -198,6 +198,121 @@
     "FROM\n",
     "staging_dim_weather;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c844de43-0b35-4eed-884a-45e4adbfc6d9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- insertion into fact table\n",
+    "INSERT INTO divvy.default.fact_trip (\n",
+    "  Trip_Key,\n",
+    "  Rider_Key,\n",
+    "  Start_Station_Key,\n",
+    "  End_Station_Key,\n",
+    "  Weather_Key\n",
+    ")\n",
+    "SELECT\n",
+    "  ride_id AS Trip_Key,\n",
+    "  rider.Rider_Key,\n",
+    "  start_station.Station_Key AS Start_Station_Key,\n",
+    "  end_station.Station_Key AS End_Station_Key,\n",
+    "  weather.Weather_Key\n",
+    "FROM silver_trip_data std\n",
+    "LEFT JOIN dim_rider rider\n",
+    "  ON std.rideable_type = rider.Bike_Type\n",
+    "LEFT JOIN dim_station start_station\n",
+    "  ON std.start_station_name = start_station.Station_Name\n",
+    "     AND std.start_lat = start_station.Latitude\n",
+    "     AND std.start_lng = start_station.Longitude\n",
+    "LEFT JOIN dim_station end_station\n",
+    "  ON std.end_station_name = end_station.Station_Name\n",
+    "     AND std.end_lat = end_station.Latitude\n",
+    "     AND std.end_lng = end_station.Longitude\n",
+    "LEFT JOIN dim_weather weather\n",
+    "  ON std.trip_start_ts = weather.Weather_Key\n",
+    "WHERE\n",
+    "  std.ride_id IS NOT NULL\n",
+    "  AND trip_start_ts IS NOT NULL\n",
+    "  AND trip_end_ts IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cd249346-1294-4420-baec-9abebc06e726",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- insertion into fact table trip duration min\n",
+    "INSERT INTO fact_trip (\n",
+    " Trip_Duration_Minutes\n",
+    ")\n",
+    "SELECT Trip_Duration_Min\n",
+    "FROM FROM silver_trip_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b71ed718-544a-40a1-883a-493650d58ece",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- insertion from dim date, dim hour for the fact trip from dim_date_day and dim_date_hour into fact trip\n",
+    "INSERT INTO fact_trip (\n",
+    "  Start_Date_Key,\n",
+    "  End_Date_Key,\n",
+    "  Start_Date_Hour_Key,\n",
+    "  End_Date_Hour_Key\n",
+    ")\n",
+    "SELECT\n",
+    "  d_start.Date_Key AS Start_Date_Key,\n",
+    "  d_end.Date_Key AS End_Date_Key,\n",
+    "  h_start.Date_Key AS Start_Date_Hour_Key,\n",
+    "  h_end.Date_Key AS End_Date_Hour_Key\n",
+    "FROM silver_trip_data std\n",
+    "LEFT JOIN dim_date_day AS d_start\n",
+    "  ON date(std.trip_start_ts) = d_start.Full_Date\n",
+    "LEFT JOIN dim_date_day AS d_end\n",
+    "  ON date(std.trip_end_ts) = d_end.Full_Date\n",
+    "LEFT JOIN dim_date_hour AS h_start\n",
+    "  ON date_format(std.trip_start_ts, 'yyyy-MM-dd HH:00:00') = h_start.Date_Key\n",
+    "LEFT JOIN dim_date_hour AS h_end\n",
+    "  ON date_format(std.trip_end_ts, 'yyyy-MM-dd HH:00:00') = h_end.Date_Key\n",
+    "WHERE\n",
+    "  std.trip_start_ts IS NOT NULL\n",
+    "  AND std.trip_end_ts IS NOT NULL;"
+   ]
   }
  ],
  "metadata": {
