--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -217,6 +217,7 @@
    },
    "outputs": [],
    "source": [
+    "%skip\n",
     "%sql\n",
     "-- DIM Station\n",
     "\n",
@@ -227,6 +228,65 @@
     "  Longitude DOUBLE,\n",
     "  CONSTRAINT pk_Station_Key PRIMARY KEY (Station_Key)\n",
     ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5b898c0f-a0de-4e2e-a499-05381d8f5e9f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE dim_station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "aaad657c-9428-408e-8238-2ce8bb619ca4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- DIM Station\n",
+    "CREATE TABLE dim_station\n",
+    "(\n",
+    "    -- SURROGATE KEY (PK) - Auto-incrementing\n",
+    "    Station_Key             BIGINT GENERATED ALWAYS AS IDENTITY,\n",
+    "    -- NATURAL KEY (for JOIN/MERGE)\n",
+    "    Station_ID_Natural      STRING NOT NULL COMMENT 'The original station ID from the source data.',\n",
+    "    -- 3. Descriptive Attributes (SCD Type 1 candidates)\n",
+    "    Station_Name            STRING,\n",
+    "    Latitude                DOUBLE,\n",
+    "    Longitude               DOUBLE,\n",
+    "    CONSTRAINT pk_station_key PRIMARY KEY (Station_Key)\n",
+    ")\n",
+    "USING DELTA;"
    ]
   },
   {
@@ -304,6 +364,29 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "d6473133-3ea0-4569-aca0-2a3a332cae81",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP table fact_trip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "1d2e1e57-3172-45c8-8e58-5b1a68f7231b",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -317,7 +400,7 @@
     "\n",
     "spark.sql(\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS fact_trip (\n",
-    "  Trip_Key BIGINT GENERATED ALWAYS AS IDENTITY,\n",
+    "  Trip_Key STRING,\n",
     "  -- Foreign Keys\n",
     "  Start_Date_Key BIGINT,\n",
     "  Start_Date_Hour_Key BIGINT,\n",
@@ -329,6 +412,7 @@
     "  Weather_Key TIMESTAMP,\n",
     "  -- Measures\n",
     "  Trip_Duration_Minutes DOUBLE,\n",
+    "  Trip_Distance_Km DOUBLE,\n",
     "\n",
     "  -- Primary Key\n",
     "  CONSTRAINT pk_fact_trip PRIMARY KEY (Trip_Key) NOT ENFORCED,\n",
@@ -359,7 +443,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7614042567928019,
+     "commandId": 7542444513201540,
      "dataframes": [
       "_sqldf"
      ]
