--- a/04 - Insertion.ipynb
+++ b/04 - Insertion.ipynb
@@ -22,6 +22,7 @@
     "%sql\n",
     "-- dim rider insertion\n",
     "INSERT INTO dim_rider (Bike_Type)\n",
+    "\n",
     "SELECT rideable_type FROM silver_trip_data"
    ]
   },
@@ -44,7 +45,9 @@
    },
    "outputs": [],
    "source": [
+    "%skip\n",
     "%sql\n",
+    "\n",
     "-- dim station insertion\n",
     "INSERT INTO dim_station (Station_Name, Latitude, Longitude)\n",
     "SELECT DISTINCT \n",
@@ -62,6 +65,68 @@
     "    end_lng\n",
     "FROM silver_trip_data\n",
     "WHERE end_station_name IS NOT NULL AND end_lat IS NOT NULL AND end_lng IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6f59be88-9d7f-430c-bd05-325773450789",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- DIM Station SCD type 1\n",
+    "MERGE INTO dim_station AS target\n",
+    "USING (\n",
+    "    -- Staging CTE\n",
+    "    WITH StagingStations AS (\n",
+    "        SELECT DISTINCT \n",
+    "            start_station_id AS Station_ID_Natural,\n",
+    "            start_station_name AS Station_Name, \n",
+    "            start_lat AS Latitude, \n",
+    "            start_lng AS Longitude\n",
+    "        FROM silver_trip_data\n",
+    "        WHERE start_station_id IS NOT NULL AND start_station_name IS NOT NULL AND start_lat IS NOT NULL\n",
+    "\n",
+    "        UNION DISTINCT\n",
+    "\n",
+    "        SELECT DISTINCT \n",
+    "            end_station_id AS Station_ID_Natural,\n",
+    "            end_station_name AS Station_Name, \n",
+    "            end_lat AS Latitude, \n",
+    "            end_lng AS Longitude\n",
+    "        FROM silver_trip_data\n",
+    "        WHERE end_station_id IS NOT NULL AND end_station_name IS NOT NULL AND end_lat IS NOT NULL\n",
+    "    )\n",
+    "    SELECT * FROM StagingStations\n",
+    ") AS source\n",
+    "ON target.Station_ID_Natural = source.Station_ID_Natural \n",
+    "\n",
+    "-- SCD Type 1\n",
+    "WHEN MATCHED AND (\n",
+    "        target.Station_Name != source.Station_Name OR\n",
+    "        target.Latitude != source.Latitude OR\n",
+    "        target.Longitude != source.Longitude\n",
+    "    )\n",
+    "    THEN UPDATE SET\n",
+    "        target.Station_Name = source.Station_Name,\n",
+    "        target.Latitude = source.Latitude,\n",
+    "        target.Longitude = source.Longitude\n",
+    "WHEN NOT MATCHED THEN\n",
+    "    INSERT (Station_ID_Natural, Station_Name, Latitude, Longitude)\n",
+    "    VALUES (source.Station_ID_Natural, source.Station_Name, source.Latitude, source.Longitude);"
    ]
   },
   {
@@ -204,9 +269,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "c844de43-0b35-4eed-884a-45e4adbfc6d9",
+     "nuid": "3c879141-9391-4eeb-9fe8-2729e4d96bd3",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -215,7 +284,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- insertion into fact table\n",
+    "-- insertion into fact table part 1\n",
     "INSERT INTO divvy.default.fact_trip (\n",
     "  Trip_Key,\n",
     "  Rider_Key,\n",
@@ -253,9 +322,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "cd249346-1294-4420-baec-9abebc06e726",
+     "nuid": "40306a24-781f-4abb-a2cb-bd3d67171393",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -264,7 +337,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- insertion into fact table trip duration min\n",
+    "-- insertion into fact table part 2\n",
     "INSERT INTO fact_trip (\n",
     " Trip_Duration_Minutes\n",
     ")\n",
@@ -277,9 +350,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "b71ed718-544a-40a1-883a-493650d58ece",
+     "nuid": "3216c3e3-737c-43e6-b95a-baa65c7ee8ca",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -288,7 +365,32 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- insertion from dim date, dim hour for the fact trip from dim_date_day and dim_date_hour into fact trip\n",
+    "INSERT INTO fact_trip (\n",
+    "Trip_Distance_Km\n",
+    ")\n",
+    "SELECT Trip_Distance_Km\n",
+    "FROM silver_trip_data\n",
+    "WHERE Trip_Distance_Km IS NOT NULL\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0983d3cc-6235-4eb7-b4dc-b80f5d2b1837",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- insertion into fact table part 3\n",
     "INSERT INTO fact_trip (\n",
     "  Start_Date_Key,\n",
     "  End_Date_Key,\n",
@@ -327,7 +429,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8635953509972505,
+     "commandId": 7835152077345861,
      "dataframes": [
       "_sqldf"
      ]
