small changes (new databricks account)

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -64,7 +64,7 @@
     "dim_date_df.write \\\n",
     "    .option(\"overwriteSchema\", \"true\") \\\n",
     "    .mode(\"overwrite\") \\\n",
-    "    .saveAsTable(\"divvy.default.DIM_Date_day\")\n",
+    "    .saveAsTable(\"natedata.default.DIM_Date_day\")\n",
     "display(dim_date_df)"
    ]
   },
@@ -89,10 +89,10 @@
    "source": [
     "%sql\n",
     "--dim_date_day_pk\n",
-    "ALTER TABLE divvy.default.dim_date_day\n",
+    "ALTER TABLE natedata.default.dim_date_day\n",
     "ALTER COLUMN Date_Key SET NOT NULL;\n",
     "\n",
-    "ALTER TABLE divvy.default.dim_date_day\n",
+    "ALTER TABLE natedata.default.dim_date_day\n",
     "ADD CONSTRAINT dim_date_day_pk PRIMARY KEY (Date_Key)\n",
     "NOT ENFORCED"
    ]
@@ -164,7 +164,7 @@
     ")\n",
     "\n",
     "# Create managed table\n",
-    "dim_date_hour_df.write.mode(\"overwrite\").saveAsTable(\"divvy.default.DIM_date_hour\")\n",
+    "dim_date_hour_df.write.mode(\"overwrite\").saveAsTable(\"natedata.default.DIM_date_hour\")\n",
     "\n",
     "display(dim_date_hour_df)"
    ]
@@ -196,61 +196,6 @@
     "ALTER TABLE dim_date_hour\n",
     "ADD CONSTRAINT dim_date_hour_pk PRIMARY KEY (Date_Key)\n",
     "NOT ENFORCED"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a14ce24a-5d77-4441-a8fe-93a506d4d76f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%skip\n",
-    "%sql\n",
-    "-- DIM Station\n",
-    "\n",
-    "CREATE TABLE Dim_Station (\n",
-    "  Station_Key BIGINT GENERATED ALWAYS AS IDENTITY,\n",
-    "  Station_Name STRING,\n",
-    "  Latitude DOUBLE,\n",
-    "  Longitude DOUBLE,\n",
-    "  CONSTRAINT pk_Station_Key PRIMARY KEY (Station_Key)\n",
-    ");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5b898c0f-a0de-4e2e-a499-05381d8f5e9f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE dim_station"
    ]
   },
   {
@@ -364,29 +309,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d6473133-3ea0-4569-aca0-2a3a332cae81",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP table fact_trip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "1d2e1e57-3172-45c8-8e58-5b1a68f7231b",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -443,7 +365,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7542444513201540,
+     "commandId": 5352540925463564,
      "dataframes": [
       "_sqldf"
      ]
