--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -40,7 +40,7 @@
     "        COALESCE(end_station_name, 'N/A') AS end_station_name,\n",
     "        COALESCE(end_station_id, 'N/A') AS end_station_id\n",
     "    FROM\n",
-    "        divvy.default.bronze_trip_data\n",
+    "        natedata.default.bronze_trip_data\n",
     "    WHERE \n",
     "        _rescued_data IS NULL\n",
     "        AND started_at IS NOT NULL\n",
@@ -116,7 +116,7 @@
     "%sql\n",
     "-- second part of silver transformation --> silver trip data lat and longitude\n",
     "\n",
-    "UPDATE divvy.default.silver_trip_data\n",
+    "UPDATE natedata.default.silver_trip_data\n",
     "SET\n",
     "    start_lat = ROUND(start_lat, 2), \n",
     "    start_lng = ROUND(start_lng, 2), \n",
@@ -212,7 +212,7 @@
     "    ) AS Date_Key\n",
     "    \n",
     "FROM\n",
-    "    divvy.default.bronze_weather_data\n",
+    "    natedata.default.bronze_weather_data\n",
     "    \n",
     "WHERE\n",
     "    _rescued_data IS NULL   \n",
@@ -263,7 +263,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4811261326724919,
+     "commandId": 4612545150682761,
      "dataframes": [
       "_sqldf"
      ]
