--- a/04 - Insertion.ipynb
+++ b/04 - Insertion.ipynb
@@ -37,47 +37,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "4f893382-1202-49fb-977b-a75a1cdcbc71",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%skip\n",
-    "%sql\n",
-    "\n",
-    "-- dim station insertion\n",
-    "INSERT INTO dim_station (Station_Name, Latitude, Longitude)\n",
-    "SELECT DISTINCT \n",
-    "    start_station_name, \n",
-    "    start_lat, \n",
-    "    start_lng\n",
-    "FROM silver_trip_data\n",
-    "WHERE start_station_name IS NOT NULL AND start_lat IS NOT NULL AND start_lng IS NOT NULL\n",
-    "\n",
-    "UNION\n",
-    "\n",
-    "SELECT DISTINCT \n",
-    "    end_station_name, \n",
-    "    end_lat, \n",
-    "    end_lng\n",
-    "FROM silver_trip_data\n",
-    "WHERE end_station_name IS NOT NULL AND end_lat IS NOT NULL AND end_lng IS NOT NULL;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "6f59be88-9d7f-430c-bd05-325773450789",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -213,7 +172,7 @@
     "    END AS Wind_type_categories_bin\n",
     "    \n",
     "FROM\n",
-    "    divvy.default.silver_weather_data\n",
+    "    natedata.default.silver_weather_data\n",
     "WHERE\n",
     "    temp_celsius IS NOT NULL AND hmdt_percent IS NOT NULL;"
    ]
@@ -285,7 +244,7 @@
    "source": [
     "%sql\n",
     "-- insertion into fact table part 1\n",
-    "INSERT INTO divvy.default.fact_trip (\n",
+    "INSERT INTO natedata.default.fact_trip (\n",
     "  Trip_Key,\n",
     "  Rider_Key,\n",
     "  Start_Station_Key,\n",
@@ -338,11 +297,15 @@
    "source": [
     "%sql\n",
     "-- insertion into fact table part 2\n",
-    "INSERT INTO fact_trip (\n",
-    " Trip_Duration_Minutes\n",
+    "INSERT INTO natedata.default.fact_trip (\n",
+    "  Trip_Key,\n",
+    "  Trip_Duration_Minutes\n",
     ")\n",
-    "SELECT Trip_Duration_Min\n",
-    "FROM FROM silver_trip_data"
+    "SELECT\n",
+    "  ride_id AS Trip_Key,\n",
+    "  Trip_Duration_Min\n",
+    "FROM natedata.default.silver_trip_data\n",
+    "WHERE ride_id IS NOT NULL"
    ]
   },
   {
@@ -366,9 +329,12 @@
    "source": [
     "%sql\n",
     "INSERT INTO fact_trip (\n",
-    "Trip_Distance_Km\n",
+    "  Trip_Key,\n",
+    "  Trip_Distance_Km\n",
     ")\n",
-    "SELECT Trip_Distance_Km\n",
+    "SELECT \n",
+    "  ride_id AS Trip_Key,\n",
+    "  Trip_Distance_Km\n",
     "FROM silver_trip_data\n",
     "WHERE Trip_Distance_Km IS NOT NULL\n",
     "  "
@@ -379,7 +345,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0983d3cc-6235-4eb7-b4dc-b80f5d2b1837",
      "showTitle": false,
@@ -392,12 +362,14 @@
     "%sql\n",
     "-- insertion into fact table part 3\n",
     "INSERT INTO fact_trip (\n",
+    "  Trip_Key,\n",
     "  Start_Date_Key,\n",
     "  End_Date_Key,\n",
     "  Start_Date_Hour_Key,\n",
     "  End_Date_Hour_Key\n",
     ")\n",
     "SELECT\n",
+    "  ride_id AS Trip_Key,\n",
     "  d_start.Date_Key AS Start_Date_Key,\n",
     "  d_end.Date_Key AS End_Date_Key,\n",
     "  h_start.Date_Key AS Start_Date_Hour_Key,\n",
@@ -429,7 +401,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7835152077345861,
+     "commandId": 4612545150682772,
      "dataframes": [
       "_sqldf"
      ]
